# yew-axum

./: Cargo.toml
mock-server/: .gitignore  Cargo.toml
mock-server/src/: main.rs
src/: lib.rs
wasm-axum/: Cargo.toml
wasm-axum/src/: main.rs
wasm-axum/web/verifier/: index.html  main.js
wasm-axum/web/wasm/: wasm.html
wasm-axum/web/yew/: index.html  package.json  yew_app.d.ts  yew_app.js  yew_app_bg.wasm  yew_app_bg.wasm.d.ts
yew-app/: Cargo.toml  build.sh
yew-app/src/: lib.rs  websocket.rs
