[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
futures = "0.3"
tracing-subscriber = "0.3"

